# companies_house_scraper

./: MANIFEST.in  README.md  pyproject.toml
src/: settings.py
src/spiders/: __init__.py  barbara_spider.py  officer_spider.py  psc_spider.py
tutorial/: companynumberswithoutheaders.csv
tutorial/tutorial/: settings.py
tutorial/tutorial/spiders/: cohoPscSpider.py  cohospider.py  docbrownexample.py
